<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">海洋餐桌</string>
    <string name="main_home">首页</string>
    <string name="main_car">购物车</string>
    <string name="main_order">订单</string>
    <string name="main_me">我的</string>
    <string name="logistics_goback_Title">订单</string>
    <string name="edit">编辑</string>
    <string name="logistice_Title">订单详情</string>
    <string name="logistice_status_Title">卖家已发货</string>
    <string name="logistice_status_time1">还剩</string>
    <string name="logistice_status_timeday">10</string>
    <string name="logistice_status_time2">天</string>
    <string name="logistice_status_timeHour">11</string>
    <string name="logistice_status_time3">时自动确认</string>
    <string name="logistice_user_Title">收货人:</string>
    <string name="logistice_user_name">王王王</string>
    <string name="logistice_user_PhoneNumber">13763012723</string>
    <string name="logistice_address_Titlt">收货地址:</string>
    <string name="logistice_address">广东省湛江市麻章区广东海洋大学</string>
    <string name="logistice_shop_Title">海森养殖场</string>
    <string name="logistice_shop_number_Title1">共</string>
    <string name="logistice_shop_number">5</string>
    <string name="logistice_shop_money_Title1">件商品</string>
    <string name="logistice_shop_money_Title2">合计: ￥</string>
    <string name="logistice_shop_Allmoney">40.00</string>
    <string name="logistice_money_Title1">(含运费:</string>
    <string name="logistice_money">10:00</string>
    <string name="logistice_money_Title2">)</string>

    <!-- 订单评分 -->
    <string name="order_grade_orderDesc">写下你对该宝贝的评分吧！对其他人很有用</string>
    <string name="order_grade_good">好评</string>
    <string name="order_grade_ok">中评</string>
    <string name="order_grade_bad">差评</string>
    <string name="order_grade_shopDesc">店铺评分</string>
    <string name="order_grade_ratBar_goodTitle">足斤足称</string>
    <string name="order_grade_ratBar_okTitle">新鲜度</string>
    <string name="order_grade_ratBar_badTitle">包装完整</string>
    <string name="order_grade_niming">匿名评价</string>
    <string name="order_grade_submit">发表评论</string>

    <!-- Button -->
    <string name="logistice_ensureBtn">确认收货</string>
    <!-- 登陆页面 -->
    <string name="sea_food_Title">海鲜套餐</string>
    <string name="login_in">登陆</string>
    <string name="free_registation">注册</string>
    <string name="phone_email_username">手机号码</string>
    <string name="password">密码</string>
    <string name="find_password">忘记密码？</string>
    <string name="login_getCode">获取验证码</string>
    <string name="register_Code">验证码</string>
    <string name="register_deal">我已经阅读并同意信息协议</string>
    <string name="findPassword_last">下一步</string>
    <string name="finding_Password">找回密码</string>
    <string name="finding_Password_input1">请输入新密码</string>
    <string name="finding_Password_input2">确认新密码</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Null">null</string>
    <string name="Hot_In_This_Month">本月热门</string>
    <string name="Buy">buy</string>
    <string name="Receving_People">收货人姓名</string>
    <string name="mobile_number">手机号码</string>
    <string name="post_code">邮政编码</string>
    <string name="province_city_area">省、市、区</string>
    <string name="save">保存</string>
    <string name="address_detail">详细地址</string>
    <string name="street">街道</string>
    <string name="manage_address">管理收货地址</string>
    <string name="add_new_address">添加新地址</string>
    <string name="comment">评价</string>
    <string name="praise">0赞</string>
    <string name="my_account">我的账户</string>
    <string name="head_image">头像</string>
    <string name="user_name">用户名字</string>
    <string name="modify">修改</string>
    <string name="modify_password">修改账户密码</string>
    <string name="binded_phone_number">已绑定手机号</string>
    <string name="quit_current_account">退出当前账号</string>
    <string name="name">姓名</string>
    <string name="my_comments">我的评论</string>
    <string name="server_phone_number">客服电话：    400-850-777</string>
    <string name="serve_time">服务时间:  10:00 - 23:00</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="step1">1输入手机</string>
    <string name="step2">2输入验证码</string>
    <string name="step3">3设置密码</string>
    <string name="input_mobile_phone">输入手机号码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">重新输入密码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="read_and_agree">我已阅读并同意协议</string>
    <string name="get_again">重新获取</string>
    <string name="submit_code">提交验证码</string>
    <string name="submit">提交</string>
    <string name="next_setp">下一步</string>
    <string name="category_fish">鱼类</string>
    <string name="category_shrimp">虾类</string>
    <string name="category_shellifs">贝类</string>
    <string name="category_crab">蟹类</string>
    <string name="category_shen">参类</string>
    <string name="category_octopus">鱿鱼类</string>
    <string name="category_longxia">龙虾</string>
    <string name="category_bazhuayu">八爪鱼</string>
    <string name="category_set_meal">套餐</string>
    <string name="category_other">其他</string>
    <string name="main_pager">首页</string>
    <string name="all_category">所有类别</string>
    <string name="coast_where">靠岸口:</string>
    <string name="book_return_time">预订靠岸时间:</string>
    <string name="catch_way">捕捞方式:</string>
    <string name="lowest_price_of_sending">起送价:</string>
    <string name="lowest">"最低 "</string>
    <string name="value_sales">销量 </string>
    <string name="zero">0</string>
    <string name="value_credit">信用值</string>
    <string name="full_weight">足斤足称</string>
    <string name="send_speed">发货速度</string>
    <string name="fresh_degree">新鲜度</string>
    <string name="only_check_comments_with_content">只查看有内容的评论</string>
    <string name="specification">规格：</string>
    <string name="add_to_shoppingcar">加入购物车</string>
    <string name="per_weight">" /KG"</string>
    <string name="machine_power">主机功率 :</string>
    <string name="seller_show">商家展示</string>
    <string name="credit_index">信用指数:</string>
    <string name="all_goods">全部商品</string>
    <string name="goods">商品</string>
    <string name="seller">商家</string>
    
    
     <!--物流详情-->
    <string name="logistice_state_informationTopTitle">物流详情</string>
    <string name="logistice_state_information_Title">物流状态:</string>
    <string name="logistice_state">运输中</string>
    <string name="logistice_company_Title">快递公司:</string>
    <string name="logistice_company">圆通快递</string>
    <string name="logistice_IdNumber_Title">快递单号:</string>
    <string name="logistice_IdNumber">03698455646</string>
    <string name="logistice_CallNumber_Title">官方电话:</string>
    <string name="logistice_CallNumber">1234567</string>
    
     <!--订单主页的item   其他页面也会引用-->
    <string name="orderHome_item_shoper">海阁号</string>
    <string name="orderHome_item_shoper_Allshop">查看该店的全部商品</string>
    <string name="orderHome_item_shopName">秋刀鱼</string>
    <string name="orderHome_item_shopPrice_Title1">￥</string>
    <string name="orderHoem_item_shopPrice">4.5</string>
    <string name="orderHome_item_shopPrice_Title2">/斤</string>
    <string name="orderHome_item_shopSize_Title">规格:</string>
    <string name="orderHome_item_shopSize">中等大小(1斤-3斤)</string>
    <string name="orderHome_item_shopNumber_Title">x</string>
    <string name="orderHome_item_shopNumber">6</string>
    <string name="orderHome_shop_number_Title1">共</string>
    <string name="orderHome_shop_number">5</string>
    <string name="orderHome_shop_money_Title1">件商品</string>
    <string name="orderHome_shop_money_Title2">合计: ￥</string>
    <string name="orderHome_shop_Allmoney">40.00</string>
    <string name="orderHome_money_Title1">(含运费:</string>
    <string name="orderHome_money">10:00</string>
    <string name="orderHome_money_Title2">)</string>
    <string name="orderHome_item_LookUpLogistice_Btn">查看物流</string>
    <string name="orderHome_item_alertShopper_Btn">提醒商家发货</string>
    <string name="orderHome_item_ToPay_Btn">去付款</string>
    <string name="orderHome_item_ToGrade_Btn">去评价</string>

</resources>