<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/login_backgroud"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_marginBottom="120dp"
        android:layout_height="fill_parent"
        android:background="@color/transparency"
        style="@style/Login_LinearView">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/Title_transparency"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/findPassword_getBackImage"
                android:layout_width="0dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/goback"
                android:background="@color/Title_transparency"
                android:layout_weight="1"
                android:layout_height="40dp"/>
            <TextView style="@style/Login_Title"
                      android:layout_width="0dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="8"
                      android:text="@string/finding_Password"/>
        </LinearLayout>
        <EditText
            android:id="@+id/finding_Password_Edit1"
            android:text="@string/finding_Password_input1"
            android:layout_marginTop="70dp"
           style="@style/Login_Edit"/>
        <View style="@style/Login_Link"/>

        <EditText
            android:id="@+id/finding_Password_Edit2"
            android:text="@string/finding_Password_input2"
            style="@style/Login_Edit"/>
        <View
            android:layout_marginBottom="20dp"
            style="@style/Login_Link"/>

        <Button
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:text="@string/findPassword_last"
            android:textSize="20sp"
            style="@style/Login_Btn"/>

        </LinearLayout>





</LinearLayout>