<?xml version="1.0" encoding="utf-8"?>
<!-- 订单物流详情的页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back_ground"
    android:orientation="vertical" >

    <FrameLayout style="@style/TitleTheme" >

        <TextView
            android:id="@+id/text_home_loc"
            style="@style/TitleLeftTheme"
            android:clickable="true"
            android:drawableLeft="@drawable/title_back"
            android:drawableStart="@drawable/title_back"
            android:marqueeRepeatLimit="marquee_forever"
            android:onClick="onBack"
            android:singleLine="true"
            android:text="订单" />

        <TextView
            android:id="@+id/text_activity_goodlist_title"
            style="@style/TitleMiddleTheme"
            android:text="物流信息" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:background="@color/white" >

            <ImageView
                android:id="@+id/logistics_state_information_Orderimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/image_frame"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/order_image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/logistics_state_information__title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_state_information_Title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/logistics_state_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_state"
                    android:textColor="@color/orange"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="13dp"
                android:layout_weight="0.25" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_company_Title" />

                <TextView
                    android:id="@+id/order_logistics_information_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_company" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.25" >

                <TextView
                    android:id="@+id/logistics_information_Number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_IdNumber_Title" />

                <TextView
                    android:id="@+id/logistics_status_information_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_IdNumber" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.25" >

                <TextView
                    android:id="@+id/order_logistics_state_information_telphone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_CallNumber_Title" />

                <TextView
                    android:id="@+id/logistics_status_information_telPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logistice_CallNumber"
                    android:textColor="@color/orange" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:background="@color/back_ground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15sp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:gravity="bottom|left"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="物流跟踪"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/back_ground" />

        <ListView
            android:id="@+id/logistice_informantion_listview"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:divider="@color/white"
            android:dividerHeight="0dp" >
        </ListView>
    </LinearLayout>

</LinearLayout>