<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_backgroud"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/Login_LinearView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="120dp" >

        <TextView style="@style/Login_Title" />

        <LinearLayout
            style="@style/Login_LinearView"
            android:layout_marginTop="15dp"
            android:layout_weight="6"
            android:background="@color/transparency" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"
                android:background="@color/transparency_edit"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/findPassword_setPhoneNumber_Edit"
                    style="@style/Login_Edit"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="8"
                    android:background="@color/transparency_edit"
                    android:ems="15"
                    android:inputType="phone"
                    android:text="@string/phone_email_username" />

                <Button
                    android:id="@+id/findPassword_getCodeAction_Btn"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="5"
                    android:background="@color/transparency_edit"
                    android:text="@string/login_getCode"
                    android:textColor="@color/login_Btn_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/Login_Link" />

            <EditText
                android:id="@+id/findPassword_setCode"
                style="@style/Login_Edit"
                android:text="@string/register_Code" />

            <View style="@style/Login_Link" />

            <Button
                android:id="@+id/findPassword_doAction_Btn"
                style="@style/Login_Btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:text="@string/findPassword_last"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>